--- a/laelbg-templates/lae-templates-tertiary26.ipynb
+++ b/laelbg-templates/lae-templates-tertiary26.ipynb
@@ -853,9 +853,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DESI main ioannis",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "desi-main-ioannis"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -867,7 +867,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
